--- a/src/sass/_cmp.scss
+++ b/src/sass/_cmp.scss
@@ -1,9 +1,9 @@
 
 .cmp 
 {
+    min-width: 327px;
     box-sizing: border-box;
     margin:0;
-
     & * {
         box-sizing: border-box;
     }
@@ -15,4 +15,186 @@
     &:last-child {
         margin-bottom: 0;
     }
+
+    &__top  
+    {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        margin-bottom: 2.7rem;
+    }
+
+
+    &__logo
+    {
+        font-size: 26px;
+        font-weight: bold;
+        margin-bottom: 0;
+    }
+
+    &__theme-toggle
+    {
+        color: $color-GreyBlue;
+        display: flex;
+        align-items: center;
+        gap:1.23rem;
+    
+        &__text 
+        {
+            font-weight: bold;
+            text-transform: uppercase;
+            margin-bottom: 0;
+            letter-spacing: .2em;
+        }
+        &__img 
+        {
+            margin-top: 0;
+        }
+
+    }
+
+    &__search-form
+    {
+        display: flex;
+        align-items: center;
+        background-color: $color-White;
+        justify-content: space-between;
+        padding: .53rem;
+        border-radius: 15px;
+        margin-bottom: 1.23rem;
+        padding-left: 1.23rem;
+
+        & * {
+            margin: 0;
+        }
+
+        &__error
+        {
+            color: $color-Red;
+        }
+    }
+
+   
+    &__input 
+    {
+        border:none;
+        background-color: transparent;
+        font-family: inherit;
+        font-size: inherit;
+        width: 100%;
+
+    }
+
+    &__btn-search
+    {
+        background-color: $color-Blue;
+        border:none;
+        color: $color-White;
+        padding: .92rem 1.38rem;
+        font-family: inherit;
+        font-size: 1.07rem;
+        font-weight: bold;
+        border-radius: 10px;
+        cursor: pointer;
+    }
+
+
+    &__main
+    {
+        background-color: $color-White;
+        border-radius: 15px;
+        padding:2.46rem 1.84rem;
+        &__top
+        {
+            display: grid;
+            grid-template-columns: 70px auto;
+            grid-template-rows: auto auto auto;
+            column-gap: 1.46rem;
+        }
+    }
+
+    &__img-profile 
+    {
+        width: 100%;
+        height: 100%;
+        grid-column: 1 / 2;
+        grid-row: 1 / -1;
+        object-fit: cover;
+    }
+
+
+    &__name 
+    {
+        font-size: 1.23rem;
+        margin-bottom: 0;
+    }
+
+    &__nickname
+    {
+        color: $color-Blue;
+        margin-top: 0;
+        margin-bottom: 0;
+    }
+
+    &__bio {
+        grid-column: 1 / -1;
+        grid-row: 4 / -1;
+        margin-top: 2.53rem;
+    }
+
+    &__date 
+    {
+        margin-top: 0;
+        margin-bottom: 0;
+        color: $color-Grey;
+    }
+
+    &__stats
+    {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        text-align: center;
+        background-color: $color-LightGrey;
+        padding: 1.38rem 1.15rem;
+    }
+
+
+    &__stat
+    {
+        &__title
+        {
+            color: $color-GreyBlue;
+            font-size: .84rem;
+        }
+
+        &__value
+        {
+            font-size: 1.23rem;
+        }
+    }
+
+    &__details
+    {
+        list-style: none;
+        padding-left: 0;
+        display: flex;
+        flex-direction: column;
+        gap: 1.3rem;
+    }
+
+    &__detail
+    {
+        display: flex;
+        align-items: center;
+        gap: 1.53rem;
+
+        &__value 
+        {
+            margin: 0;
+        }
+    }
+    
+
+  
 }
