--- a/src/css/style.css
+++ b/src/css/style.css
@@ -19,6 +19,11 @@ html {
   font-size: 13px;
 }
 
+@media (min-width: 768px) {
+  html {
+    font-size: 15px;
+  }
+}
 .cmp {
   min-width: 327px;
   box-sizing: border-box;
@@ -55,6 +60,7 @@ html {
   text-transform: uppercase;
   margin-bottom: 0;
   letter-spacing: 0.2em;
+  font-size: 13px;
 }
 .cmp__theme-toggle__img {
   margin-top: 0;
@@ -114,6 +120,7 @@ html {
 .cmp__name {
   font-size: 1.23rem;
   margin-bottom: 0;
+  color: #2B3442;
 }
 .cmp__nickname {
   color: #0079FF;
@@ -137,13 +144,20 @@ html {
   text-align: center;
   background-color: #F6F8FF;
   padding: 1.38rem 1.15rem;
+  margin-bottom: 1.8rem;
 }
 .cmp__stat__title {
-  color: #4B6A9B;
+  color: #697C9A;
   font-size: 0.84rem;
+  margin-bottom: 0.615rem;
+  font-weight: 400;
 }
 .cmp__stat__value {
+  margin-top: 0;
+  margin-bottom: 0;
   font-size: 1.23rem;
+  color: #2B3442;
+  font-weight: bold;
 }
 .cmp__details {
   list-style: none;
@@ -159,6 +173,67 @@ html {
 }
 .cmp__detail__value {
   margin: 0;
+}
+
+@media (min-width: 768px) {
+  .cmp {
+    min-width: 573px;
+  }
+  .cmp__search-form {
+    padding: 0.66rem;
+    padding-left: 2.13rem;
+  }
+  .cmp__img-search {
+    margin-right: 1.6rem;
+  }
+  .cmp__input {
+    font-size: 1.2rem;
+  }
+  .cmp__main {
+    padding: 2.66rem;
+  }
+  .cmp__main__top {
+    grid-template-columns: 117px auto;
+  }
+  .cmp__name {
+    font-size: 1.73rem;
+  }
+  .cmp__nickname {
+    font-size: 1.066rem;
+  }
+  .cmp__stats {
+    text-align: left;
+    justify-content: start;
+    gap: 5.4rem;
+    margin-bottom: 2rem;
+  }
+  .cmp__stat__title {
+    font-size: 0.866rem;
+  }
+  .cmp__stat__value {
+    font-size: 1.46rem;
+  }
+  .cmp__details {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto;
+  }
+  .cmp__detail-location {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .cmp__detail-website {
+    grid-column: 1/2;
+    grid-row: 2/-1;
+  }
+  .cmp__detail-twitter {
+    grid-column: 2/-1;
+    grid-row: 1/2;
+  }
+  .cmp__detail-company {
+    grid-column: 2/-1;
+    grid-row: 2/-1;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
