--- a/src/sass/_cmp.scss
+++ b/src/sass/_cmp.scss
@@ -127,6 +127,7 @@
     &__name 
     {
         font-size: 1.23rem;
+        margin-top: 0;
         margin-bottom: 0;
         color: $color-DarkGrey;
     }
@@ -231,6 +232,10 @@
             font-size: 1.2rem;
         }
 
+        &__btn-search
+        {
+            font-size: 1.066rem;
+        }
 
         &__main
         {
@@ -301,6 +306,56 @@
         {
             grid-column: 2 / -1;
             grid-row: 2 /-1;
+        }
+    }
+}
+
+
+@media (min-width: 1440px)
+{
+    
+    .cmp
+    {
+        min-width: 730px;
+        &__main
+        {
+            &__top
+            {
+                grid-template-columns: 117px auto auto;
+                grid-template-rows: auto auto auto;
+                margin-bottom: 2.13rem;
+            }
+        }
+
+        &__img-profile 
+        {
+            grid-column: 1 / 2;
+            grid-row: 1 / -1;
+        }
+
+        &__name 
+        {
+            grid-column: 2 / 3;
+            grid-row: 1 / 2;
+        }
+
+        &__nickname
+        {
+            grid-column: 2 / 3;
+            grid-row: 2 / 3;
+            margin-bottom: 1.33rem;
+        }
+        &__bio
+        {
+            grid-column: 2 / -1;
+            grid-row: 3 / -1;
+            margin-top: 0;
+        }
+
+        &__date 
+        {
+            grid-column: 3 / -1;
+            grid-row: 1 / 2;
         }
     }
 }
