--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,3 +1,329 @@
+body {
+  margin: 0;
+  font-family: "Space Mono", monospace;
+  min-height: 100vh;
+  background-color: #F6F8FF;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  padding: 2.38rem 6.4% 6rem;
+}
 
+p {
+  line-height: 1.8;
+  color: #4B6A9B;
+}
+
+html {
+  font-size: 13px;
+}
+
+@media (min-width: 768px) {
+  html {
+    font-size: 15px;
+  }
+}
+.cmp {
+  min-width: 327px;
+  box-sizing: border-box;
+  margin: 0;
+}
+.cmp * {
+  box-sizing: border-box;
+}
+.cmp *:first-child {
+  margin-top: 0;
+}
+.cmp:last-child {
+  margin-bottom: 0;
+}
+.cmp__top {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  margin-bottom: 2.7rem;
+}
+.cmp__logo {
+  font-size: 26px;
+  font-weight: bold;
+  margin-bottom: 0;
+}
+.cmp__theme-toggle {
+  color: #4B6A9B;
+  display: flex;
+  align-items: center;
+  gap: 1.23rem;
+  background: none;
+  border: none;
+  cursor: pointer;
+  transition: all 300ms;
+}
+.cmp__theme-toggle:hover {
+  filter: brightness(120%);
+}
+.cmp__theme-toggle__text {
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 0;
+  letter-spacing: 0.2em;
+  font-size: 13px;
+  transition: all 300ms;
+}
+.cmp__theme-toggle__img {
+  margin-top: 0;
+}
+.cmp__search-form {
+  display: flex;
+  align-items: center;
+  background-color: #FEFEFE;
+  justify-content: space-between;
+  padding: 0.53rem;
+  border-radius: 15px;
+  margin-bottom: 1.23rem;
+  padding-left: 1.23rem;
+  transition: all 300ms;
+}
+.cmp__search-form * {
+  margin: 0;
+}
+.cmp__search-form__error {
+  color: #F74646;
+}
+.cmp__input {
+  border: none;
+  background-color: transparent;
+  font-family: inherit;
+  font-size: inherit;
+  width: 100%;
+  color: #4B6A9B;
+  margin-right: 1rem;
+}
+.cmp__input::placeholder {
+  color: #4B6A9B;
+}
+.cmp__btn-search {
+  background-color: #0079FF;
+  border: none;
+  color: #FEFEFE;
+  padding: 0.92rem 1.38rem;
+  font-family: inherit;
+  font-size: 1.07rem;
+  font-weight: bold;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.cmp__main {
+  background-color: #FEFEFE;
+  border-radius: 15px;
+  padding: 2.46rem 1.84rem;
+  transition: all 300ms;
+}
+.cmp__main--inactive {
+  display: none;
+}
+.cmp__main__top {
+  display: grid;
+  grid-template-columns: 70px auto;
+  grid-template-rows: auto auto auto;
+  column-gap: 1.46rem;
+}
+.cmp__img-profile {
+  width: 100%;
+  height: 100%;
+  grid-column: 1/2;
+  grid-row: 1/-1;
+  object-fit: cover;
+  border-radius: 50%;
+}
+.cmp__name {
+  font-size: 1.23rem;
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #2B3442;
+}
+.cmp__nickname {
+  color: #0079FF;
+  margin-top: 0;
+  margin-bottom: 0;
+}
+.cmp__bio {
+  grid-column: 1/-1;
+  grid-row: 4/-1;
+  margin-top: 2.53rem;
+}
+.cmp__date {
+  margin-top: 0;
+  margin-bottom: 0;
+  color: #697C9A;
+}
+.cmp__stats {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  text-align: center;
+  background-color: #F6F8FF;
+  padding: 1.38rem 1.15rem;
+  margin-bottom: 1.8rem;
+  border-radius: 10px;
+}
+.cmp__stat__title {
+  color: #697C9A;
+  font-size: 0.84rem;
+  margin-bottom: 0.615rem;
+  font-weight: 400;
+}
+.cmp__stat__value {
+  margin-top: 0;
+  margin-bottom: 0;
+  font-size: 1.23rem;
+  color: #2B3442;
+  font-weight: bold;
+}
+.cmp__details {
+  list-style: none;
+  padding-left: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 1.3rem;
+}
+.cmp__detail {
+  display: flex;
+  align-items: center;
+  gap: 1.53rem;
+}
+.cmp__detail__value {
+  margin: 0;
+}
+.cmp__detail--unavailable {
+  opacity: 50%;
+}
+
+@media (min-width: 768px) {
+  .cmp {
+    min-width: 573px;
+  }
+  .cmp__search-form {
+    padding: 0.66rem;
+    padding-left: 2.13rem;
+  }
+  .cmp__img-search {
+    margin-right: 1.6rem;
+  }
+  .cmp__input {
+    font-size: 1.2rem;
+  }
+  .cmp__btn-search {
+    font-size: 1.066rem;
+  }
+  .cmp__main {
+    padding: 2.66rem;
+  }
+  .cmp__main__top {
+    grid-template-columns: 117px auto;
+  }
+  .cmp__name {
+    font-size: 1.73rem;
+  }
+  .cmp__nickname {
+    font-size: 1.066rem;
+  }
+  .cmp__stats {
+    text-align: left;
+    justify-content: start;
+    gap: 5.4rem;
+    margin-bottom: 2rem;
+  }
+  .cmp__stat__title {
+    font-size: 0.866rem;
+  }
+  .cmp__stat__value {
+    font-size: 1.46rem;
+  }
+  .cmp__details {
+    display: grid;
+    grid-template-columns: 50% 50%;
+    grid-template-rows: auto auto;
+  }
+  .cmp__detail-location {
+    grid-column: 1/2;
+    grid-row: 1/2;
+  }
+  .cmp__detail-website {
+    grid-column: 1/2;
+    grid-row: 2/-1;
+  }
+  .cmp__detail-twitter {
+    grid-column: 2/-1;
+    grid-row: 1/2;
+  }
+  .cmp__detail-company {
+    grid-column: 2/-1;
+    grid-row: 2/-1;
+  }
+}
+@media (min-width: 1440px) {
+  .cmp {
+    min-width: 730px;
+  }
+  .cmp__main__top {
+    grid-template-columns: 117px auto auto;
+    grid-template-rows: auto auto auto;
+    margin-bottom: 2.13rem;
+  }
+  .cmp__img-profile {
+    grid-column: 1/2;
+    grid-row: 1/-1;
+  }
+  .cmp__name {
+    grid-column: 2/3;
+    grid-row: 1/2;
+  }
+  .cmp__nickname {
+    grid-column: 2/3;
+    grid-row: 2/3;
+    margin-bottom: 1.33rem;
+  }
+  .cmp__bio {
+    grid-column: 2/-1;
+    grid-row: 3/-1;
+    margin-top: 0;
+  }
+  .cmp__date {
+    grid-column: 3/-1;
+    grid-row: 1/2;
+  }
+}
+body.dark {
+  background-color: #141D2F;
+  color: #FEFEFE;
+}
+body.dark .cmp__theme-toggle__text {
+  color: #FEFEFE;
+}
+body.dark .cmp__search-form {
+  background-color: #1E2A47;
+}
+body.dark .cmp__input::placeholder {
+  color: white;
+}
+body.dark .cmp__main {
+  background-color: #1E2A47;
+}
+body.dark .cmp__name, body.dark .cmp__date, body.dark .cmp__bio {
+  color: #FEFEFE;
+}
+body.dark .cmp__stats {
+  background-color: #141D2F;
+}
+body.dark .cmp__stat__title, body.dark .cmp__stat__value {
+  color: #FEFEFE;
+}
+body.dark .cmp__detail__icon path {
+  fill: #FEFEFE;
+}
+body.dark .cmp__detail__value {
+  color: #FEFEFE;
+}
 
 /*# sourceMappingURL=style.css.map */
